result/0526-083137/stderr.log
/home/runner/work/pgi-2025-the_aesthetic_windows/pgi-2025-the_aesthetic_windows/src/main.c:46:5: error: expected identifier or ‘(’ before ‘else’
   46 |   } else if (strcmp(configuration.command, "print_pixel") == 0) {
      |     ^~~~
/home/runner/work/pgi-2025-the_aesthetic_windows/pgi-2025-the_aesthetic_windows/src/main.c:57:3: error: expected identifier or ‘(’ before ‘return’
   57 |   return 0;
      |   ^~~~~~
/home/runner/work/pgi-2025-the_aesthetic_windows/pgi-2025-the_aesthetic_windows/src/main.c:58:1: error: expected identifier or ‘(’ before ‘}’ token
   58 | }
      | ^
gmake[2]: *** [CMakeFiles/freud.dir/build.make:107: CMakeFiles/freud.dir/src/main.c.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
/home/runner/work/pgi-2025-the_aesthetic_windows/pgi-2025-the_aesthetic_windows/src/features.c: In function ‘run_feature’:
/home/runner/work/pgi-2025-the_aesthetic_windows/pgi-2025-the_aesthetic_windows/src/features.c:83:9: warning: implicit declaration of function ‘strcmp’ [-Wimplicit-function-declaration]
   83 |     if (strcmp(feature, "print_pixel") == 0) {
      |         ^~~~~~
/home/runner/work/pgi-2025-the_aesthetic_windows/pgi-2025-the_aesthetic_windows/src/features.c:6:1: note: include ‘<string.h>’ or provide a declaration of ‘strcmp’
    5 | #include "utils.h"
  +++ |+#include <string.h>
    6 | 
gmake[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/freud.dir/all] Error 2
gmake: *** [Makefile:136: all] Error 2

The process '/usr/local/bin/cmake' failed with exit code 2